# uvc_app_for_rk3588

uvc_app/: CMakeLists.txt  main.c
uvc_app/uvc/: drm.c  mpi_enc.c  mpi_enc.h  uvc-gadget.c  uvc-gadget.h  uvc_configfs.c  uvc_control.c  uvc_encode.cpp  uvc_log.h  uvc_video.cpp  uvc_video.h
uvc_app/uvc/drm/: ..install.cmd
